# VISTA

./: .gitignore  pyproject.toml  qwen_yolo.py
sista/: caption.py  cat_vista.py  detect.py  main.py  main_detect.py  report.py  sista_whole.py  total.py  tracker.py  utils.py
