[project]
name = "DroneAmbulanceAI"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
    "bbox-visualizer>=0.3.0",
    "bitsandbytes>=0.49.0",
    "decord>=0.6.0",
    "flashinfer-python>=0.5.3",
    "gradio>=5.51.1",
    "huggingface-hub>=0.36.0",
    "json-repair>=0.52.4",
    "lap>=0.5.13",
    "lovely-tensors>=0.1.20",
    "notebook>=7.5.1",
    "opencv-python==4.12.0.88",
    "optuna>=4.8.0",
    "pyvips>=3.1.1",
    "qwen-vl-utils>=0.0.14",
    "sam3>=0.1.3",
    "streamlit>=1.56.0",
    "torch>=2.10.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.23.0",
    "transformers[torch]>=5.0",
    "triton-rocm>=3.6.0",
    "ultralytics>=8.4.27",
    "unsloth-zoo",
    "unsloth[amd]",
    "wget>=3.2",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-rocm" }]
torchvision = [{ index = "pytorch-rocm" }]
triton-rocm = [{ index = "pytorch-rocm" }]
pytorch-triton-rocm = [{ index = "pytorch-rocm" }]
torchaudio = [{ index = "pytorch-rocm"}]
unsloth = { git = "https://github.com/unslothai/unsloth", branch = "nightly" }
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo", branch = "nightly" }
