[project]
name = "DroneAmbulanceAI"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
    "bbox-visualizer>=0.3.0",
    "bitsandbytes>=0.49.0",
    "flashinfer-python>=0.5.3",
    "huggingface-hub>=0.36.0",
    "json-repair>=0.52.4",
    "lap>=0.5.13",
    "opencv-python==4.12.0.88",
    "partial-json-parser>=0.2.1.1.post7",
    "rfdetr[plus]>=1.8.3",
    "scipy>=1.18.0",
    "supervision>=0.29.1",
    "torch>=2.10.0",
    "torchao>=0.17.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.3",
    "trackers>2.4.0",
    "transformers[torch]>=5.0",
    "triton-rocm>=3.6.0",
    "ultralytics>=8.4.27",
    "unsloth-zoo",
    "unsloth[amd]",
    "wget>=3.2",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-rocm" }]
torchvision = [{ index = "pytorch-rocm" }]
triton-rocm = [{ index = "pytorch-rocm" }]
pytorch-triton-rocm = [{ index = "pytorch-rocm" }]
torchaudio = [{ index = "pytorch-rocm"}]
unsloth = { git = "https://github.com/unslothai/unsloth", branch = "nightly" }
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo", branch = "nightly" }
trackers = { git = "https://github.com/roboflow/trackers", branch = "develop" }
torchao = [{ index = "pytorch-rocm" }]
